<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/settings_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_navigation_back_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="48dp"
        android:layout_marginStart="24dp"
        />

    <TextView
        android:id="@+id/settings_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        android:text="@string/settings_screen_header"
        android:textAllCaps="true"
        android:textColor="@color/primaryText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Switch
        android:id="@+id/settings_switch_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/secondaryText"
        android:text="@string/settings_screen_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_header"
        android:layout_marginTop="77dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        />

    <Switch
        android:id="@+id/settings_switch_connection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/secondaryText"
        android:text="@string/settings_screen_hd_connection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_switch_camera"
        android:layout_marginTop="28dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        />

    <Switch
        android:id="@+id/settings_switch_men"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/secondaryText"
        android:text="@string/settings_screen_men"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_switch_connection"
        android:layout_marginTop="28dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        />


    <Switch
        android:id="@+id/settings_switch_woman"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/secondaryText"
        android:text="@string/settings_screen_women"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_switch_men"
        android:layout_marginTop="28dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>