<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background">

    <TextView
        android:id="@+id/privacy_policy_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        android:text="@string/privacy_policy_screen_header"
        android:textAllCaps="true"
        android:textColor="@color/primaryText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/privacy_policy_body"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="15dp"
        android:scrollbars="vertical"
        android:textAlignment="center"
        android:textColor="@color/secondaryText"
        android:textSize="18sp"
        android:textStyle="normal"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/privacy_policy_header"
        app:layout_constraintBottom_toTopOf="@id/privacy_policy_button_agree" />


    <TextView
        android:id="@+id/privacy_policy_button_agree"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_accent_button"
        android:gravity="center"
        android:text="@string/privacy_policy_accept"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/privacy_policy_button_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/privacy_policy_button_cancel"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/shape_accent_transparent_button"
        android:gravity="center"
        android:text="@string/privacy_policy_cancel"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/secondaryText"
        android:textSize="20sp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>