<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background">

    <TextView
        android:id="@+id/start_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        android:text="@string/start_screen_header"
        android:textAllCaps="true"
        android:textColor="@color/primaryText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/start_online_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:textColor="@color/secondaryText"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_header" />

    <com.gtomato.android.ui.widget.CarouselView
        android:id="@+id/start_accounts_rv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_online_counter" />

    <LinearLayout
        android:id="@+id/image_buttons_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_accounts_rv">

        <ImageView
            android:id="@+id/start_rewind_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_rewind" />

        <ImageView
            android:id="@+id/start_message_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:src="@drawable/ic_message" />

    </LinearLayout>

    <TextView
        android:id="@+id/start_button_main"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/shape_accent_button"
        android:gravity="center"
        android:text="@string/start_screen_main_button"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_buttons_container" />


    <TextView
        android:id="@+id/start_button_settings"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/shape_accent_transparent_button"
        android:gravity="center"
        android:text="@string/start_screen_settings_button"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/secondaryText"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_button_main" />

</androidx.constraintlayout.widget.ConstraintLayout>